[gd_scene load_steps=8 format=3 uid="uid://dybxo3thepgxb"]

[ext_resource type="Script" path="res://Sidebar.gd" id="1_40hdf"]
[ext_resource type="Script" path="res://CamposContainer.gd" id="2_coukp"]
[ext_resource type="Script" path="res://NuevoCampoForm.gd" id="3_nw61d"]
[ext_resource type="Script" path="res://NuevoLoteForm.gd" id="4_hf3jl"]
[ext_resource type="Texture2D" uid="uid://b6s8x0t4o5dlr" path="res://icon.svg" id="4_illj2"]
[ext_resource type="Script" path="res://Panel.gd" id="5_mkysu"]
[ext_resource type="Script" path="res://MainScripts/Grid.gd" id="5_sb2sw"]

[node name="Sidebar" type="Node2D"]

[node name="Sidebar" type="VBoxContainer" parent="."]
offset_left = 5.0
offset_top = 5.0
offset_right = 305.0
offset_bottom = 795.0
script = ExtResource("1_40hdf")

[node name="PrincipalContainer" type="VBoxContainer" parent="Sidebar"]
layout_mode = 2
size_flags_vertical = 3

[node name="Campos" type="Button" parent="Sidebar/PrincipalContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Campos
"

[node name="Ciclos" type="Button" parent="Sidebar/PrincipalContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Ciclos"

[node name="Contratistas" type="Button" parent="Sidebar/PrincipalContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Contratistas"

[node name="Productos" type="Button" parent="Sidebar/PrincipalContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Productos"

[node name="Semillas" type="Button" parent="Sidebar/PrincipalContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Semillas"

[node name="Tratamientos" type="Button" parent="Sidebar/PrincipalContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Tratamientos"

[node name="Salir" type="Button" parent="Sidebar/PrincipalContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Salir"

[node name="CamposContainer" type="VBoxContainer" parent="Sidebar"]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_coukp")

[node name="Nuevo" type="Button" parent="Sidebar/CamposContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Nuevo
"

[node name="Editar" type="Button" parent="Sidebar/CamposContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Editar"

[node name="Eliminar" type="Button" parent="Sidebar/CamposContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Eliminar"

[node name="Atras" type="Button" parent="Sidebar/CamposContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Atras"

[node name="NuevoCampoForm" type="VBoxContainer" parent="Sidebar/CamposContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_nw61d")

[node name="Label" type="Label" parent="Sidebar/CamposContainer/NuevoCampoForm"]
layout_mode = 2
size_flags_vertical = 1
text = "NUEVO CAMPO"
horizontal_alignment = 1

[node name="NombreCampo" type="LineEdit" parent="Sidebar/CamposContainer/NuevoCampoForm"]
layout_mode = 2
placeholder_text = "Nombre"

[node name="NuevoLoteForm" type="VBoxContainer" parent="Sidebar/CamposContainer/NuevoCampoForm"]
layout_mode = 2
size_flags_vertical = 6
script = ExtResource("4_hf3jl")

[node name="HSeparator" type="HSeparator" parent="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label2" type="Label" parent="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm"]
layout_mode = 2
size_flags_vertical = 1
text = "Lote"
horizontal_alignment = 1

[node name="CrearLote" type="Button" parent="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm"]
layout_mode = 2
text = "Agregar Lote"

[node name="Nombre" type="LineEdit" parent="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm"]
layout_mode = 2
placeholder_text = "Nombre"
editable = false

[node name="Area" type="LineEdit" parent="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm"]
layout_mode = 2
placeholder_text = "Area"
editable = false

[node name="VBoxContainer" type="HBoxContainer" parent="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm"]
layout_mode = 2

[node name="Cancelar" type="Button" parent="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Cancelar"

[node name="Aceptar" type="Button" parent="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Aceptar"

[node name="Previsualizar" type="CheckButton" parent="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm"]
layout_mode = 2
text = "Previsualizar"

[node name="HSeparator2" type="HSeparator" parent="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm"]
layout_mode = 2
size_flags_vertical = 3

[node name="Crear" type="Button" parent="Sidebar/CamposContainer/NuevoCampoForm"]
layout_mode = 2
text = "Crear Campo"

[node name="Atras" type="Button" parent="Sidebar/CamposContainer/NuevoCampoForm"]
layout_mode = 2
text = "Atras"

[node name="Panel" type="Panel" parent="."]
offset_left = 310.0
offset_top = 5.0
offset_right = 1195.0
offset_bottom = 795.0
script = ExtResource("5_mkysu")

[node name="CamposList" type="ItemList" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = 5.0
offset_right = 850.0
offset_bottom = 785.0
select_mode = 1
item_count = 3
max_columns = 3
icon_mode = 0
icon_scale = 1.9
item_0/text = "Campo 1"
item_0/icon = ExtResource("4_illj2")
item_1/text = "Campo 2"
item_1/icon = ExtResource("4_illj2")
item_2/text = "Campo 3"
item_2/icon = ExtResource("4_illj2")

[node name="Grid" type="Node2D" parent="Panel"]
visible = false
top_level = true
z_index = 1
position = Vector2(357, 84)
script = ExtResource("5_sb2sw")
height = 20

[connection signal="pressed" from="Sidebar/PrincipalContainer/Campos" to="Sidebar" method="_on_campos_pressed"]
[connection signal="pressed" from="Sidebar/PrincipalContainer/Salir" to="Sidebar" method="_on_salir_pressed"]
[connection signal="visibility_changed" from="Sidebar/CamposContainer" to="Sidebar/CamposContainer" method="_on_visibility_changed"]
[connection signal="pressed" from="Sidebar/CamposContainer/Nuevo" to="Sidebar/CamposContainer" method="_on_nuevo_pressed"]
[connection signal="pressed" from="Sidebar/CamposContainer/Atras" to="Sidebar" method="_on_campo_atras_pressed"]
[connection signal="visibility_changed" from="Sidebar/CamposContainer/NuevoCampoForm" to="Sidebar/CamposContainer/NuevoCampoForm" method="_on_visibility_changed"]
[connection signal="pressed" from="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm/CrearLote" to="Sidebar/CamposContainer/NuevoCampoForm" method="_on_crear_lote_pressed"]
[connection signal="pressed" from="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm/CrearLote" to="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm" method="_on_crear_lote_pressed"]
[connection signal="pressed" from="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm/CrearLote" to="Panel/Grid" method="_on_crear_lote_pressed"]
[connection signal="pressed" from="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm/VBoxContainer/Cancelar" to="Sidebar/CamposContainer/NuevoCampoForm" method="_on_cancelar_pressed"]
[connection signal="pressed" from="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm/VBoxContainer/Cancelar" to="Panel/Grid" method="_on_cancelar_pressed"]
[connection signal="pressed" from="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm/VBoxContainer/Aceptar" to="Sidebar/CamposContainer/NuevoCampoForm" method="_on_aceptar_pressed"]
[connection signal="pressed" from="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm/VBoxContainer/Aceptar" to="Panel/Grid" method="_on_aceptar_pressed"]
[connection signal="pressed" from="Sidebar/CamposContainer/NuevoCampoForm/NuevoLoteForm/Previsualizar" to="Panel/Grid" method="_on_previsualizar_pressed"]
[connection signal="pressed" from="Sidebar/CamposContainer/NuevoCampoForm/Atras" to="Sidebar/CamposContainer" method="_on_nuevo_atras_pressed"]
